@@ -14,18 +14,10 @@
 @import 'lib/typography.css';
 @import 'lib/grid.css';
 
-
 /* Additional functionality can be found in the plugins directory.
    See the readme files for each plugin. Examples:
    @import 'plugins/buttons/buttons.css';
    @import 'plugins/fancy-type/fancy-type-compressed.css'; */
    
-
-/* Compressed version (re-compress if you change the core files): 
-   [http://teenage.cz/acidofil/tools/cssformat.php]
-   Comment out @import statements above, and add this line instead:
-   @import 'lib/compressed.css'; */
-
-
 /* Uncomment the line below to see the grid and baseline. */
 /* .container { background: url(lib/grid.png); } */
